--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 &nbsp;<i class="fa fa-bug" aria-hidden="true" title="Ошибка"></i>
 &nbsp;<i class="fa fa-file-o" aria-hidden="true" style="color:darkorange" title="Вне ТЗ"></i>
 &nbsp;<i class="fa fa-star" aria-hidden="true" style="color:red" title="Важная задача"></i>
+&nbsp;<i class="fa fa-star" aria-hidden="true" style="color:red" title="Качество постановки задачи"></i>
 </span></span></h1>
 </div>
 <div class="col-lg-4">
